--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -4,6 +4,28 @@ body {
   font-size: 15px;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+          box-shadow: inset 0 0 5px grey;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c7c7c7;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #fff;
+}
+
 .navbar-brand img {
   max-height: 50px;
 }
@@ -196,20 +218,63 @@ header .banner-img {
 }
 
 .bg-login {
-  background-color: #358DFF;
-  margin-top: 50px;
+  background: #187ec4;
+  background: -webkit-gradient(linear, left top, right top, from(#487ef3), color-stop(60%, #0c52bd), to(#127cf5));
+  background: linear-gradient(90deg, #487ef3 0%, #0c52bd 60%, #127cf5 100%);
+  margin-top: 15px;
 }
 
 .bg-login .card-login {
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 30px;
+  height: 570px;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
 }
 
-.bg-login .card-login .img-login {
-  max-height: 140px;
+.bg-login .card-login .login-img {
+  border-radius: 5px;
+  background-color: #E6F2FF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px;
+}
+
+.bg-login .card-login .login-img .login-banner {
+  background-size: cover;
+  max-width: 60%;
+}
+
+.bg-login .card-login .login-form {
+  height: 570px;
+  overflow: auto;
+  padding: 40px;
+}
+
+.bg-login .card-login .login-form .login-logo {
+  max-width: 0px;
+}
+
+.bg-login .card-login .login-form .login-header .title-header {
+  font-size: 20px;
+}
+
+.bg-login .card-login .login-form .login-header .subtitle-header {
+  font-size: 14px;
+}
+
+.bg-login .card-login .login-form .btn-login {
+  background-color: #009CFF;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: white;
 }
 
 .section-banner {
@@ -300,9 +365,26 @@ header .banner-img {
   background: #fff;
 }
 
-.section-hospital-detail .img-hospital-detail {
-  border-radius: 4px;
-  max-width: 500px;
+.section-hospital-detail .gallery .xzoom-container {
+  display: block;
+}
+
+.section-hospital-detail .gallery .xzoom-container .xzoom {
+  width: 100%;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin-bottom: 10px;
+}
+
+.section-hospital-detail .gallery .xzoom-container img .xzoom-gallery {
+  height: 120px;
+  width: 120px;
+}
+
+.section-hospital-detail .gallery .xzoom-container .xactive {
+  border: 4px solid #1ABC9C;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .section-hospital-detail .hospital-detail .hospital-name {
@@ -550,5 +632,63 @@ header .banner-img {
   padding-left: 25px;
   padding-right: 25px;
   color: white;
+}
+
+.section-article-header {
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.section-article-header .title-header {
+  color: #094077;
+  font-size: 25px;
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+}
+
+.section-article-content .card-article {
+  min-height: 220px;
+  border-radius: 4px;
+  background-color: #000;
+  color: white;
+  background-size: cover;
+  margin-bottom: 20px;
+}
+
+.section-article-content .card-article .overlay {
+  opacity: 1;
+  background: black;
+  background: rgba(0, 0, 0, 0.5);
+  /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  border-radius: 6px;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  color: white;
+  height: 220px;
+}
+
+.section-article-content .card-article .overlay:hover {
+  cursor: pointer;
+}
+
+.section-article-content .card-article .overlay .article-city {
+  padding-top: 120px;
+  padding-left: 20px;
+  font-size: 18px;
+}
+
+.section-article-content .card-article .overlay .article-name {
+  font-size: 15px;
+  margin-top: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: 300;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 /*# sourceMappingURL=main.css.map */
