--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -4,6 +4,29 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 5px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(199, 199, 199); 
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #fff; 
+  }
+
+
 // font-family: 'Merriweather', serif;
 .navbar-brand{
     img {
@@ -186,16 +209,52 @@ main {
 }
 
 .bg-login {
-    background-color: #358DFF;
-    margin-top: 50px;
+    background: rgb(24,126,196);
+    background: linear-gradient(90deg, rgb(72, 126, 243) 0%, rgb(12, 82, 189) 60%, rgb(18, 124, 245) 100%);
+    margin-top: 15px;
     .card-login {
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-bottom: 30px;
+        height: 570px;
         background-color: #fff;
-        border-radius: 4px;
-        .img-login {
-            max-height: 140px;
+        border-radius: 5px;
+        box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+        .login-img {
+            border-radius: 5px;
+            background-color: #E6F2FF;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px;
+            // justify-content: center;
+            .login-banner {
+                background-size: cover;
+                max-width: 60%;
+            }
+        }
+        .login-form {
+            height: 570px;
+            overflow: auto;
+            padding: 40px;
+            .login-logo {
+                max-width: 0px;
+            }
+            .login-header {
+                .title-header {
+                    font-size: 20px;
+                }
+                .subtitle-header {
+                    font-size: 14px;
+                }
+            }
+            .btn-login{
+                background-color: #009CFF;
+                padding-left: 25px;
+                padding-right: 25px;
+                color: white;
+            }
         }
     }
 }
@@ -273,9 +332,26 @@ main {
 .section-hospital-detail{
     margin-top: 30px;
     background:#fff;
-    .img-hospital-detail {
-        border-radius: 4px;
-        max-width: 500px;
+    .gallery {
+        .xzoom-container {
+            display: block;
+
+            .xzoom {
+                width: 100%;
+                box-shadow: none;
+                margin-bottom: 10px;
+            }
+
+            img .xzoom-gallery {
+                height: 120px;
+                width: 120px;
+            }
+
+            .xactive {
+                border: 4px solid #1ABC9C;
+                box-shadow: none;
+            }
+        }
     }
     .hospital-detail {
         .hospital-name {
@@ -488,6 +564,59 @@ main {
                     padding-right: 25px;
                     color: white;
                 }
+            }
+        }
+    }
+}
+
+.section-article-header {
+    margin-top: 40px;
+    margin-bottom: 30px;
+    .title-header {
+        color: #094077;
+        font-size: 25px;
+        font-family: 'Merriweather', serif;
+        font-weight: bold;
+    }
+}
+
+.section-article-content {
+    .card-article{
+        min-height: 220px;
+        border-radius: 4px;
+        background-color: #000;
+        color: white;
+        background-size: cover;
+        margin-bottom: 20px;
+        .overlay {
+            opacity: 1;
+            background: rgb(0, 0, 0);
+            background: rgba(0, 0, 0, 0.5); /* Black see-through */
+            color: #f1f1f1; 
+            width: 100%;
+            border-radius: 6px;
+            transition: .5s ease;
+            color: white;
+            height: 220px;
+            &:hover {
+                cursor: pointer;
+            }
+            .article-city {
+                padding-top: 120px;
+                padding-left: 20px;
+                font-size: 18px;
+            }
+            .article-name {
+                font-size: 15px;
+                margin-top: 5px;
+                padding-left: 20px;
+                padding-right: 20px;
+                font-weight: 300;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical;
             }
         }
     }
